[gd_scene load_steps=5 format=1]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://images/guest_m.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=2]

resource/name = "walk"
length = 0.3
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/keys = { "cont":true, "times":FloatArray( 0, 0.1, 0.2, 0.3 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ 0, 0, 2, 3 ] }

[node name="player" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.02169, -0, 0, 5.19103, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"Script" }

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 6.96323, 6.96323 )
texture = ExtResource( 2 )
hframes = 4
region_rect = Rect2( 0, 0, 16, 16 )

[node name="walk_anim" type="AnimationPlayer" parent="Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/walk = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/scale = Vector2( 1.02169, 5.19103 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="look_left" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( -30, 0 )
layer_mask = 2
type_mask = 16

[node name="look_right" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 30, 0 )
layer_mask = 2
type_mask = 16

[connection signal="area_enter" from="." to="." method="_on_player_area_enter"]

[connection signal="area_exit" from="." to="." method="_on_player_area_exit"]


